kong_blue_green/secret_test_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
        volumeMounts:
        - name: foo
          mountPath: /secrets
      volumes:
      - name: foo
        secret:
          secretName: mysecret
          items:
          - key: access_key
            path: access_key
            mode: 0644
