kong_blue_green/apache_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apache
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: apache-green-apache
          servicePort: 80
#    host: kong-test.nimbusscale.com
